// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset password reducer should handle LOADING 1`] = `
Object {
  "loading": true,
  "passwordResetError": "",
  "passwordResetSuccess": "",
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_ERROR 1`] = `
Object {
  "loading": false,
  "passwordResetError": "invalid email",
  "passwordResetSuccess": "",
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_SUCCESS 1`] = `
Object {
  "loading": false,
  "passwordResetError": "",
  "passwordResetSuccess": "Please check your email",
}
`;

exports[`reset password reducer should return the initial state 1`] = `
Object {
  "loading": "false",
  "passwordResetError": "",
  "passwordResetSuccess": "",
}
`;
